--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,8 @@
     "version": 2,
     "builds": [
         {
-            "src": "py.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb" }
-        },
-        {
-            "src": "api.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb" }
+            "src": "Dockerfile",
+            "use": "@vercel/docker"
         }
     ],
     "routes": [
